# mirante

./: README.md  pyproject.toml
src/crew_fastapi/: crew.py  db_postgresql.py  main.py  readme.md
src/crew_fastapi/config/: agents.yaml  tasks.yaml
